Cascading Change Log

2.0.0 [unreleased]

  Added support for c.f.Flow tags via the c.f.FlowDef class.

  Added c.f.FlowDef to allow for creating flow definitions via a fluent builder interface.

  Added SUBMITTED status to c.s.CascadingStats to properly track when a job is submitted vs when it actually begins
  processing after being queued.

  Added management interfaces for capturing detailed statistics.

  Decoupled core from Apache Hadoop, removed stack based streaming model. Use c.f.h.HadoopFlowConnector to plan
  Hadoop specific flows.

  Implemented 'local' mode to support independent processing of complex processes in memory. Use
  c.f.l.LocalFlowConnector for local mode specific flows.

  Updated and simplified c.t.Tap and c.t.Scheme interfaces. Changes are not backwards compatible to 1.x releases.

  Implemented new pipelining infrastructure to support more complex streaming topologies.

1.2.3 [unreleased]

  Fixed bug where c.t.Fields#append() would fail when appending unordered selectors.

  Updated c.f.FlowProcess to include #isCounterStatusInitialized() to test if the underlying reporting framework
  is initialized.

  Updated c.f.FlowProcess#keepAlive() method to fail silently if the underlying reporting framework is not initialized.

  Updated error message thrown by c.f.FlowStep when unable to find c.t.Tap or c.p.Pipe instances in the flow plan due
  to a Class serialized field not implementing #hashCode() or #equals() and relying in the object identity.

  Added error message explaining the Hadoop mapred.jobtracker.completeuserjobs.maximum property needs to be increased
  when dealing with large numbers of jobs.

  Fixed bug in c.t.GlobHfs where #equals() and #hashCode() were not consistent between calls.

1.2.2

  Fixed bug where OOME caught from within the source c.t.Tap was not being re-thrown properly.

  Added #getMapProgress() and #getReduceProgress() to c.f.h.HadoopStepStats.

  Fixed NPE with some invocations of c.t.TupleEntry ctor.
