@@ -344,7 +344,7 @@ public class Cascade implements Runnable
    * To revert back to consulting the strategies associated with each Flow instance, re-set this value to {@code null}, its
    * default value.
    * <p/>
-   * FlowSkipStrategy instances define when a Flow instance should be skipped. The default strategy is {@link cascading.flow.FlowSkipIfSinkStale}
+   * FlowSkipStrategy instances define when a Flow instance should be skipped. The default strategy is {@link cascading.flow.FlowSkipIfSinkNotStale}
    * and is inherited from the Flow instance in question. An alternative strategy would be {@link cascading.flow.FlowSkipIfSinkExists}.
    * <p/>
    * A FlowSkipStrategy will not be consulted when executing a Flow directly through {@link #start()}
