@@ -26,10 +26,10 @@ import java.io.IOException;
 /**
  * Interface FlowSkipStrategy is used to create new strategies that decide when a {@link Flow} should
  * be skipped when executed in a {@link cascading.cascade.Cascade}. The default strategy is
- * {@link cascading.flow.FlowSkipIfSinkStale}.
+ * {@link FlowSkipIfSinkNotStale}.
  *
  * @see cascading.flow.FlowSkipIfSinkExists
- * @see cascading.flow.FlowSkipIfSinkStale
+ * @see FlowSkipIfSinkNotStale
  */
 public interface FlowSkipStrategy
   {
